--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "intl": "1.2.4",
     "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
+    "linq": "3.0.9",
     "lodash": "4.13.1",
+    "makepy": "^1.1.0",
     "normalize.css": "4.1.1",
     "object-assign": "4.1.0",
     "opus-recorder": "github:actorapp/Recorderjs",
@@ -80,8 +82,7 @@
     "react-modal": "1.3.0",
     "react-router": "2.4.1",
     "setimmediate": "1.0.4",
-    "simple-scrollbar": "github:actorapp/simple-scrollbar",
-    "linq": "3.0.9"
+    "simple-scrollbar": "github:actorapp/simple-scrollbar"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
