--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "highlight.js": "9.4.0",
     "immutable": "3.8.1",
     "intl": "1.2.4",
+    "jquery": "^3.2.1",
     "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
     "linq": "3.0.9",
