--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
     "react-modal": "1.3.0",
     "react-router": "2.4.1",
     "setimmediate": "1.0.4",
-    "simple-scrollbar": "github:actorapp/simple-scrollbar",
-    "electron": "^1.7.9"
+    "simple-scrollbar": "github:actorapp/simple-scrollbar"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
