添加记住账户密码和自动登录、记住登录用户名

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "babel-polyfill": "6.9.1",
     "classnames": "2.2.5",
     "crosstab": "0.2.12",
+    "electron": "^1.7.9",
+    "electron-config": "^1.0.0",
+    "electron-prebuilt": "^1.4.13",
     "favico.js": "0.3.10",
     "fbjs": "0.8.3",
     "flexboxgrid": "6.3.0",
