--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.7",
     "json-loader": "^0.5.4",
+    "markdown-it": "^8.4.1",
     "node-sass": "^3.7.0",
     "pace": "github:hubspot/pace#v1.0.2",
     "postcss": "^5.0.21",
