--- a/package.json
+++ b/package.json
@@ -59,10 +59,15 @@
     "flexboxgrid": "6.3.0",
     "flux": "2.1.1",
     "fuzzaldrin": "2.1.0",
+    "google-analytics-js": "^0.1.1",
+    "hammerjs": "^2.0.8",
     "highlight.js": "9.4.0",
     "immutable": "3.8.1",
     "intl": "1.2.4",
-    "jquery": "^3.2.1",
+    "jquery": "2.2.1",
+    "jquery-bridget": "^2.0.1",
+    "jquery.event.drag": "^2.2.2",
+    "jquery.mousewheel": "^3.1.9",
     "jsonlylightbox": "github:actorapp/jsOnlyLightbox#develop",
     "keymirror": "0.1.1",
     "linq": "3.0.9",
@@ -72,6 +77,7 @@
     "object-assign": "4.1.0",
     "opus-recorder": "github:actorapp/Recorderjs",
     "pace": "github:hubspot/pace#v1.0.2",
+    "prevent-ghost-click": "0.0.0",
     "rc-animate": "^2.4.1",
     "rc-tooltip": "3.3.2",
     "react": "15.1.0",
@@ -83,6 +89,7 @@
     "react-intl": "2.1.2",
     "react-modal": "1.3.0",
     "react-router": "2.4.1",
+    "screenfull": "^3.3.2",
     "setimmediate": "1.0.4",
     "simple-scrollbar": "github:actorapp/simple-scrollbar"
   },
@@ -98,6 +105,7 @@
     "eslint": "^2.11.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
+    "expose-loader": "^0.7.5",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
